# rust-meta

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  editor.rs  git.rs  main.rs
