[package]
name = "meta"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml_edit = { version = "0.22", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
semver = "1.0"
glob = "0.3"

[dev-dependencies]
tempfile = "3.10"

